--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Kaggadasapura Toastmasters Club - Empowering confident communicators and leaders.">
+    <meta name="description" content="Kaggadasapura Toastmasters Club - Empowering confident communicators and leaders.">
     <meta name="keywords" content="Toastmasters, public speaking, leadership, communication, meetings, networking">
     <title>Kaggadasapura Toastmasters Club</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -25,9 +24,9 @@
                         <a href="#about">About Us</a>
                         <ul class="dropdown-content">
                             <li><a href="index.html">Home</a></li>
-                            
                             <li><a href="ExCom.html">ExCom</a></li>
                         </ul>
+                    </li>
                     <li><a href="#achievements">Achievements</a></li>
                     <li><a href="#resources">Resources</a></li>
                 </ul>
@@ -42,8 +41,7 @@
             <div class="content">
                 <h1>Kaggadasapura Toastmasters Club</h1>
                 <h2>Empowering Confident Communicators and Leaders</h2>
-                <a href="https://chat.whatsapp.com/Gd8UDkE3geG4UFzKl6s0a5" target="_blank" class="whatsapp-link">Join
-                    Our Guest Group</a>
+                <a href="https://chat.whatsapp.com/Gd8UDkE3geG4UFzKl6s0a5" target="_blank" class="whatsapp-link">Join Our Guest Group</a>
             </div>
         </div>
     </section>
@@ -56,37 +54,24 @@
                 <div class="meeting-info">
                     <h3>Regular Meetings</h3>
                     <ul>
-                        <li><strong>Kaggadasapura Toastmasters Club</strong> meets every <strong>Saturday</strong> from
-                            <strong>11:00 AM - 12:30 PM</strong>
-                        </li>
-                        <li><strong>Active Participation:</strong> Members take on roles such as speakers and
-                            evaluators, promoting personal development in communication and leadership.</li>
-                        <li><strong>Inclusive Environment:</strong> Welcoming all experience levels for growth and
-                            confidence building.</li>
-                        <li><strong>Online:</strong> <a
-                                href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_N2QyY2Y4ZmQtN2ZhYy00YjFmLWJkZTktOGZmOGVkNDJjMTQ2%40thread.v2/0?context=%7b%22Tid%22%3a%228ac47bf0-3832-41be-9f50-f17276792c1c%22%2c%22Oid%22%3a%22df0680dc-508a-4397-93a9-efdca338852a%22%7d"
-                                target="_blank" class="meeting-link">Join Online</a></li>
+                        <li><strong>Kaggadasapura Toastmasters Club</strong> meets every <strong>Saturday</strong> from <strong>11:00 AM - 12:30 PM</strong></li>
+                        <li><strong>Active Participation:</strong> Members take on roles such as speakers and evaluators, promoting personal development in communication and leadership.</li>
+                        <li><strong>Inclusive Environment:</strong> Welcoming all experience levels for growth and confidence building.</li>
+                        <li><strong>Online:</strong> <a href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_N2QyY2Y4ZmQtN2ZhYy00YjFmLWJkZTktOGZmOGVkNDJjMTQ2%40thread.v2/0?context=%7b%22Tid%22%3a%228ac47bf0-3832-41be-9f50-f17276792c1c%22%2c%22Oid%22%3a%22df0680dc-508a-4397-93a9-efdca338852a%22%7d" target="_blank" class="meeting-link">Join Online</a></li>
                         <li><strong>Offline:</strong> <b>Scholar Minds Kaggadasapura, Above SBI</b>
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.896622012339!2d77.67690137454669!3d12.97846341472882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1166dfe8247f%3A0x2232f9e1f90f4f11!2sState%20Bank%20of%20India!5e0!3m2!1sen!2sin!4v1731907695069!5m2!1sen!2sin"
-                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.896622012339!2d77.67690137454669!3d12.97846341472882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1166dfe8247f%3a0x2232f9e1f90f4f11!2sState%20Bank%20of%20India!5e0!3m2!1sen!2sin!4v1731907695069!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="meeting-info">
                     <h3>Special Events</h3>
-                    <p>At <strong>Kaggadasapura Toastmasters Club</strong>, we host various special events to enhance
-                        our members' experience:</p>
+                    <p>At <strong>Kaggadasapura Toastmasters Club</strong>, we host various special events to enhance our members' experience:</p>
                     <ul>
-                        <li><strong>Linkers Meeting:</strong> Collaborative sessions to build connections and foster
-                            networking.</li>
-                        <li><strong>Educational Sessions:</strong> Workshops covering speech crafting, body language,
-                            and leadership techniques.</li>
-                        <li><strong>Rendezvous Meetings:</strong> Informal gatherings to share experiences and insights.
-                        </li>
-                        <li><strong>Celebratory Events:</strong> Milestone Meetings to recognize and celebrate
-                            achievements.</li>
+                        <li><strong>Linkers Meeting:</strong> Collaborative sessions to build connections and foster networking.</li>
+                        <li><strong>Educational Sessions:</strong> Workshops covering speech crafting, body language, and leadership techniques.</li>
+                        <li><strong>Rendezvous Meetings:</strong> Informal gatherings to share experiences and insights.</li>
+                        <li><strong>Celebratory Events:</strong> Milestone Meetings to recognize and celebrate achievements.</li>
                     </ul>
                 </div>
             </div>
@@ -133,16 +118,12 @@
             <h1>Glimpses of Our Meetings</h1>
         </div>
 
-        <div class=".glimpses-section h2">
-            <div class="gallery">
-                <img height="300px" width="500px" src="./Assets/IMG_20240525_092539.jpg" alt="Meeting Photo 1"
-                    class="gallery-item">
-                <img height="300px" width="500px" src="./Assets/IMG_20240525_110234.jpg" alt="Meeting Photo 2"
-                    class="gallery-item">
-                <img height="300px" width="500px" src="./Assets/Rendezvous Meeting members photo .jpg"
-                    alt="Meeting Photo 3" class="gallery-item">
-                <img height="300px" width="500px" src="./Assets/Rendezvous Meeting.jpg" alt="Meeting Photo 4"
-                    class="gallery-item">
+        <div class="gallery">
+            <img height="300px" width="500px" src="./Assets/IMG_20240525_092539.jpg" alt="Meeting Photo 1" class="gallery-item">
+            <img height="300px" width="500px" src="./Assets/IMG_20240525_110234.jpg" alt="Meeting Photo 2" class="gallery-item">
+            <img height="300px" width="500px" src="./Assets/Rendezvous Meeting members photo .jpg" alt="Meeting Photo 3" class="gallery-item">
+            <img height="300px" width="500px" src="./Assets/Rendezvous Meeting.jpg" alt="Meeting Photo 4" class="gallery-item">
+        </div>
     </section>
 
     <!-- Join Us Section -->
@@ -150,7 +131,7 @@
         <div class="footer-container">
             <!-- Contact Info Section -->
             <div class="footer-contact">
-                <a href="tel:+91 9380258206" class="footer-link">
+                <a href="tel:+91 " class="footer-link">
                     <i class="fas fa-phone-alt"></i> +91 9380258206
                 </a>
                 <a href="mailto:kaggadasapuratoastmastersclub@gmail.com" class="footer-link">
@@ -162,9 +143,8 @@
             </div>
         </div>
     </footer>
-    
 
-            <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
