--- a/index.html
+++ b/index.html
@@ -1,149 +1,58 @@
-/* General Styles */ 
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #F2DF74;
-    color: #004165;
-    text-align: center;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kaggadasapura Toastmasters</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">Kaggadasapura Toastmasters</div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#meetings">Meetings</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <div class="menu-toggle">&#9776;</div>
+        </nav>
+    </header>
 
-h1, h2 {
-    font-weight: bold;
-}
+    <section class="hero">
+        <h1>Welcome to Kaggadasapura Toastmasters</h1>
+        <p>Empowering speakers, building leaders.</p>
+        <a href="#contact" class="btn">Join Us</a>
+    </section>
 
-h2 {
-    color: #772432;
-}
+    <section id="about" class="content">
+        <h2>About Us</h2>
+        <p>We are a community of passionate speakers and leaders, helping each other grow in communication and leadership skills.</p>
+    </section>
 
-/* Navbar */
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 20px;
-    background-color: #004165;
-    color: white;
-}
+    <section id="meetings" class="content">
+        <h2>Our Meetings</h2>
+        <p>Join us every weekend to enhance your public speaking skills in a friendly environment.</p>
+    </section>
 
-.logo {
-    font-size: 24px;
-    font-weight: bold;
-}
+    <section id="gallery" class="content">
+        <h2>Gallery</h2>
+        <div class="gallery-grid">
+            <img src="images/img1.jpg" alt="Meeting Image 1">
+            <img src="images/img2.jpg" alt="Meeting Image 2">
+            <img src="images/img3.jpg" alt="Meeting Image 3">
+        </div>
+    </section>
 
-.nav-links {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-}
+    <section id="contact" class="content">
+        <h2>Contact Us</h2>
+        <p>Reach out to us to know more about our club and how you can be a part of it.</p>
+    </section>
 
-.nav-links li {
-    display: inline;
-}
-
-.nav-links a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    transition: 0.3s;
-}
-
-.nav-links a:hover {
-    text-decoration: underline;
-}
-
-.menu-toggle {
-    display: none;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-/* Hero Section */
-.hero {
-    background: linear-gradient(135deg, #F2DF74, #A9B2B1);
-    padding: 80px 20px;
-    border-radius: 10px;
-    margin: 20px;
-}
-
-.hero h1 {
-    font-size: 36px;
-    color: #772432;
-}
-
-.hero p {
-    font-size: 18px;
-    margin: 10px 0;
-}
-
-.btn {
-    background-color: #004165;
-    color: white;
-    padding: 12px 24px;
-    border-radius: 8px;
-    text-decoration: none;
-    font-size: 18px;
-    transition: 0.3s;
-}
-
-.btn:hover {
-    background-color: #772432;
-}
-
-/* Sections */
-.content {
-    padding: 50px 20px;
-    background: white;
-    margin: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-/* Gallery */
-.gallery-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 15px;
-    padding: 20px;
-}
-
-.gallery-grid img {
-    width: 100%;
-    border-radius: 10px;
-    transition: transform 0.3s;
-}
-
-.gallery-grid img:hover {
-    transform: scale(1.05);
-}
-
-/* Footer */
-footer {
-    background-color: #004165;
-    color: white;
-    padding: 15px;
-    margin-top: 20px;
-}
-
-/* Responsive Design */
-@media (max-width: 768px) {
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        text-align: center;
-        position: absolute;
-        background: #004165;
-        width: 100%;
-        top: 60px;
-        left: 0;
-        padding: 10px;
-    }
-
-    .nav-links.active {
-        display: flex;
-    }
-
-    .menu-toggle {
-        display: block;
-    }
-}
+    <footer>
+        <p>&copy; 2025 Kaggadasapura Toastmasters. All rights reserved.</p>
+    </footer>
+</body>
+</html>
