--- a/index.html
+++ b/index.html
@@ -1,58 +1,190 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaggadasapura Toastmasters</title>
+    <meta name="description"
+        content="Kaggadasapura Toastmasters Club - Empowering confident communicators and leaders.">
+    <meta name="keywords" content="Toastmasters, public speaking, leadership, communication, meetings, networking">
+    <title>Kaggadasapura Toastmasters Club</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <!-- Navigation Bar -->
     <header>
-        <nav class="navbar">
-            <div class="logo">Kaggadasapura Toastmasters</div>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#meetings">Meetings</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-            <div class="menu-toggle">&#9776;</div>
-        </nav>
+        <div class="container">
+            <img src="./Assets/toastmasters-logo-color.png" alt="Logo" class="logo">
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#achievements">Achievements</a></li>
+                    <li><a href="#resources">Resources</a></li>
+                </ul>
+                <input type="text" placeholder="Search" class="search-bar">
+            </nav>
+        </div>
     </header>
 
-    <section class="hero">
-        <h1>Welcome to Kaggadasapura Toastmasters</h1>
-        <p>Empowering speakers, building leaders.</p>
-        <a href="#contact" class="btn">Join Us</a>
-    </section>
-
-    <section id="about" class="content">
-        <h2>About Us</h2>
-        <p>We are a community of passionate speakers and leaders, helping each other grow in communication and leadership skills.</p>
-    </section>
-
-    <section id="meetings" class="content">
-        <h2>Our Meetings</h2>
-        <p>Join us every weekend to enhance your public speaking skills in a friendly environment.</p>
-    </section>
-
-    <section id="gallery" class="content">
-        <h2>Gallery</h2>
-        <div class="gallery-grid">
-            <img src="images/img1.jpg" alt="Meeting Image 1">
-            <img src="images/img2.jpg" alt="Meeting Image 2">
-            <img src="images/img3.jpg" alt="Meeting Image 3">
+    <!-- Hero Section -->
+    <section class="overlapped-section" id="home" style="background-image: url('./Assets/Logo\ -\ Kaggadasapura\ Toastmasters\ Club\ .jpg');">
+        <div class="overlay">
+            <div class="content">
+                <h1>Kaggadasapura Toastmasters Club</h1>
+                <h2>Empowering Confident Communicators and Leaders</h2>
+                <a href="https://chat.whatsapp.com/Gd8UDkE3geG4UFzKl6s0a5" target="_blank" class="whatsapp-link">Join
+                    Our Guest Group</a>
+            </div>
         </div>
     </section>
 
-    <section id="contact" class="content">
-        <h2>Contact Us</h2>
-        <p>Reach out to us to know more about our club and how you can be a part of it.</p>
+    <!-- Meetings Section -->
+    <section id="meetings" class="meetings-section">
+        <h1>Meetings</h1>
+        <div class="heading">
+            <div class="meeting-details">
+                <div class="meeting-info">
+                    <h3>Regular Meetings</h3>
+                    <ul>
+                        <li><strong>Kaggadasapura Toastmasters Club</strong> meets every <strong>Saturday</strong> from
+                            <strong>11:00 AM - 12:30 PM</strong>
+                        </li>
+                        <li><strong>Active Participation:</strong> Members take on roles such as speakers and
+                            evaluators, promoting personal development in communication and leadership.</li>
+                        <li><strong>Inclusive Environment:</strong> Welcoming all experience levels for growth and
+                            confidence building.</li>
+                        <li><strong>Online:</strong> <a
+                                href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_N2QyY2Y4ZmQtN2ZhYy00YjFmLWJkZTktOGZmOGVkNDJjMTQ2%40thread.v2/0?context=%7b%22Tid%22%3a%228ac47bf0-3832-41be-9f50-f17276792c1c%22%2c%22Oid%22%3a%22df0680dc-508a-4397-93a9-efdca338852a%22%7d"
+                                target="_blank" class="meeting-link">Join Online</a></li>
+                        <li><strong>Offline:</strong> <b>Scholar Minds Kaggadasapura, Above SBI</b>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.896622012339!2d77.67690137454669!3d12.97846341472882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1166dfe8247f%3A0x2232f9e1f90f4f11!2sState%20Bank%20of%20India!5e0!3m2!1sen!2sin!4v1731907695069!5m2!1sen!2sin"
+                                width="1500" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </ul>
+                </div>
+
+                <div class="meeting-info">
+                    <h3>Special Events</h3>
+                    <p>At <strong>Kaggadasapura Toastmasters Club</strong>, we host various special events to enhance
+                        our members' experience:</p>
+                    <ul>
+                        <li><strong>Linkers Meeting:</strong> Collaborative sessions to build connections and foster
+                            networking.</li>
+                        <li><strong>Educational Sessions:</strong> Workshops covering speech crafting, body language,
+                            and leadership techniques.</li>
+                        <li><strong>Rendezvous Meetings:</strong> Informal gatherings to share experiences and insights.
+                        </li>
+                        <li><strong>Celebratory Events:</strong> Milestone Meetings to recognize and celebrate
+                            achievements.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Kaggadasapura Toastmasters. All rights reserved.</p> 
+<!-- Achievements Section -->
+<section id="achievements" class="achievements-section">
+    <div class="heading">
+        <h1>Achievements</h1>
+    </div>
+    <div class="achievements-content">
+        <ul>
+            <li>
+                <strong>Kumar Ashutosh:</strong> Winner of Table Topics and Runner-up in <b>Area E1 Evaluation and TT Contest.</b>
+                <img src="./Assets/Area E1 Winners List .jpg" alt="Kumar Ashutosh" class="achievement-img" style="height: 470px; width: auto;">
+            </li>
+            <li>
+                <strong>Rachana Kulkarni:</strong> Serving as <strong>Division E Director</strong> 
+                <img src="./Assets/Rachana.jpg" alt="Rachana Kulkarni" class="achievement-img" style="height: 470px; width: auto;" >
+            </li>
+            <li>
+                <strong>H Pranav:</strong> Serving as <strong>Area E1 Director</strong>.
+                <img src="./Assets/AD H Pranav .jpg" alt="H Pranav" class="achievement-img" style="height: 470px; width: auto;">
+            </li>
+            <li>
+                <strong>Senjuti Sen:</strong> Serving as <strong>Area E4 Director</strong>.
+                <img src="./Assets/Senjuti.jpg" alt="Senjuti Sen" class="achievement-img" style="height: 470px; width: auto;">
+            </li>
+        </ul>
+    </div>
+</section>
+
+
+
+    <!-- Why Join Us Section -->
+    <section id="why-join-us" class="why-join-us-section">
+        <div class="heading">
+            <h1>Why Should You Join Us?</h1>
+        </div>
+
+        <div class="container1">
+            <div class="points-container">
+                <div class="point">
+                    <strong>🎤 Develop Public Speaking Skills:</strong>
+                    <p>Gain confidence and clarity in expressing your ideas.</p>
+                </div>
+                <div class="point">
+                    <strong>👔 Leadership Opportunities:</strong>
+                    <p>Take on leadership roles and sharpen your organizational skills.</p>
+                </div>
+                <div class="point">
+                    <strong>🤝 Supportive Environment:</strong>
+                    <p>Receive constructive feedback and grow at your own pace.</p>
+                </div>
+                <div class="point">
+                    <strong>🎉 Diverse Learning Experiences:</strong>
+                    <p>Engage in themed meetings and hear from inspiring guest speakers.</p>
+                </div>
+                <div class="point">
+                    <div style="text-align: center;">
+                        <strong>🌏 Networking:</strong>
+                        <p>Connect with professionals and expand your personal network.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Glimpses of Meetings Section -->
+    <section id="glimpses" class="glimpses-section">
+        <div class="heading">
+            <h1>Glimpses of Our Meetings</h1>
+        </div>
+
+        <div class=".glimpses-section h2">
+            <div class="gallery">
+                <img height="400px" width="500px" src="./Assets/WhatsApp Image 2025-02-15 at 11.04.06_8136aad5.jpg" alt="Meeting Photo 1"
+                    class="gallery-item">
+                <img height="400px" width="500px" src="./Assets/Rendezvous Meeting members photo .jpg"
+                    alt="Meeting Photo 3" class="gallery-item">
+                <img height="400px" width="500px" src="./Assets/Rendezvous Meeting.jpg" alt="Meeting Photo 4"
+                    class="gallery-item">
+    </section>
+
+    <!-- Join Us Section -->
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- Contact Info Section -->
+            <div class="footer-contact">
+                <h3>For Any Queries/Membership Details, Reach out to us by using the below details </h3>
+                <a href="tel:+91 9980562640" class="footer-link">
+                    <i class="fas fa-phone-alt"></i> +91 99805 62640 
+                </a>
+                <a href="mailto:kaggadasapuratoastmastersclub@gmail.com" class="footer-link">
+                    <i class="fas fa-envelope"></i> kaggadasapuratoastmastersclub@gmail.com
+                </a>
+                <a href="https://www.instagram.com/tmi_kaggadasapura/" class="footer-link" target="_blank">
+                    <i class="fab fa-instagram"></i> tmi_kaggadasapura
+                </a>
+            </div>
+        </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
